tests/negative/string_oob.sans
main() {
  s = "hello"
  c = s.char_at(100)
  p(c)
}
